--- a/assets/styles/mainstyle.css
+++ b/assets/styles/mainstyle.css
@@ -93,6 +93,8 @@ main {
 
 .content_container button {
     padding: 5px 10px;
+    width: 100%;
+    height: 100%;
     background-color: lightgreen;
     color: darkslateblue;
     border: 0px solid transparent;
